[Mac] Fix for avatar button active state and removed fast chooser profile code

- The avatar button should only be set as active if the a bubble is
opened
- Removed the code for the fast chooser in the cocoa files

BUG=670613

Review-Url: https://codereview.chromium.org/2552423002
Cr-Commit-Position: refs/heads/master@{#437947}

Former-commit-id: 8c0be82a912cb5ef954980c924c32b99740f761c