chrome/browser/ui/cocoa/profiles/avatar_base_controller.h
@@ -35,7 +35,6 @@ class ProfileUpdateObserver;
   // as AvatarButtonErrorController.
   std::unique_ptr<ProfileUpdateObserver> profileObserver_;
 
- @private
   // The menu controller, if the menu is open.
   BaseBubbleController* menuController_;
 }
@@ -59,8 +58,6 @@ class ProfileUpdateObserver;
 
 @interface AvatarBaseController (ExposedForTesting)
 - (BaseBubbleController*)menuController;
-
-- (BOOL)isCtrlPressed;
 @end
 
 class ProfileUpdateObserver : public ProfileAttributesStorage::Observer,
